duniverse/menhirLib.20200211/test/static/bad/multiple-precedence.mly
%left A
%right A
%token A
%start<int> a
%%

a: A {}
